[gd_scene load_steps=28 format=2]

[ext_resource path="res://scripts/main_screen.gd" type="Script" id=1]
[ext_resource path="res://graphics/bg/bg_fade.png" type="Texture" id=2]
[ext_resource path="res://graphics/ui/main_screen/repel_back.png" type="Texture" id=3]
[ext_resource path="res://graphics/ui/main_screen/high_score_bg.png" type="Texture" id=4]
[ext_resource path="res://Autumn Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://graphics/ui/main_screen/play.png" type="Texture" id=6]
[ext_resource path="res://graphics/bg/bg_hexarepel.png" type="Texture" id=7]
[ext_resource path="res://graphics/ui/main_screen/button_2.png" type="Texture" id=8]
[ext_resource path="res://graphics/ui/main_screen/button_0.png" type="Texture" id=9]
[ext_resource path="res://graphics/ui/main_screen/button_1.png" type="Texture" id=10]
[ext_resource path="res://graphics/ui/main_screen/exit.png" type="Texture" id=11]
[ext_resource path="res://graphics/ui/main_screen/info.png" type="Texture" id=12]
[ext_resource path="res://graphics/ui/main_screen/settings.png" type="Texture" id=13]
[ext_resource path="res://graphics/ui/main_screen/play_2.png" type="Texture" id=14]
[ext_resource path="res://graphics/ui/main_screen/play_1.png" type="Texture" id=15]
[ext_resource path="res://graphics/ui/main_screen/play_0.png" type="Texture" id=16]
[ext_resource path="res://scenes/theme_panel.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/play_panel.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/settings_panel.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/about_panel.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/leave_panel.tscn" type="PackedScene" id=21]

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 3
outline_color = Color( 0, 0, 0, 0.392157 )
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
resource_name = "button_down"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.075, 1.075 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "button_down"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.075, 1.075 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "button_down"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.075, 1.075 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.075, 1.075 ) ]
}

[sub_resource type="DynamicFont" id=6]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 0.588235 )
font_data = ExtResource( 5 )

[node name="main_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="graphics" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="color_rect" type="ColorRect" parent="graphics"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.054902, 0.568627, 0.47451, 1 )

[node name="texture_rect3" type="TextureRect" parent="graphics"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2.0
margin_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="texture_rect" type="TextureRect" parent="graphics"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -279.5
margin_top = 68.7242
margin_right = 279.5
margin_bottom = 471.724
texture = ExtResource( 3 )

[node name="high_score" type="Control" parent="graphics"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -234.5
margin_top = 498.462
margin_right = 234.5
margin_bottom = 587.461

[node name="texture_rect2" type="TextureRect" parent="graphics/high_score"]
modulate = Color( 0, 0, 0, 0.196078 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -231.0
margin_top = -40.5
margin_right = 231.0
margin_bottom = 40.5
texture = ExtResource( 4 )

[node name="label" type="Label" parent="graphics/high_score"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -45.1369
margin_right = 200.0
margin_bottom = 51.8633
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="buttons" type="Control" parent="graphics"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -817.168
margin_right = 300.0
margin_bottom = -217.168

[node name="texture_rect2" type="TextureRect" parent="graphics/buttons"]
modulate = Color( 1, 1, 1, 0.156863 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -245.0
margin_top = 200.0
margin_right = -125.0
margin_bottom = 333.0
rect_rotation = 90.0
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 60, 66.5 )
texture = ExtResource( 6 )

[node name="texture_rect3" type="TextureRect" parent="graphics/buttons"]
modulate = Color( 1, 1, 1, 0.156863 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 130.0
margin_top = 200.0
margin_right = 250.0
margin_bottom = 333.0
rect_rotation = 90.0
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 60, 66.5 )
texture = ExtResource( 6 )

[node name="texture_rect4" type="TextureRect" parent="graphics/buttons"]
modulate = Color( 1, 1, 1, 0.156863 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = 321.938
margin_right = 60.0
margin_bottom = 454.938
rect_rotation = 90.0
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 60, 66.5 )
texture = ExtResource( 6 )

[node name="texture_rect5" type="TextureRect" parent="graphics/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -248.5
margin_top = -81.951
margin_right = 248.5
margin_bottom = 492.049
texture = ExtResource( 7 )

[node name="exit_button" type="Button" parent="graphics/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -195.0
margin_top = 95.0
margin_right = -175.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( 10, 10 )

[node name="texture_rect3" type="TextureRect" parent="graphics/buttons/exit_button"]
modulate = Color( 0.886275, 0.133333, 0.133333, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.5
margin_top = -106.5
margin_right = 122.5
margin_bottom = 106.5
texture = ExtResource( 8 )

[node name="texture_rect" type="TextureRect" parent="graphics/buttons/exit_button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.5
margin_top = -113.5
margin_right = 131.5
margin_bottom = 113.5
texture = ExtResource( 9 )

[node name="texture_rect2" type="TextureRect" parent="graphics/buttons/exit_button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.5
margin_top = -84.5
margin_right = 97.5
margin_bottom = 84.5
texture = ExtResource( 10 )

[node name="texture_rect4" type="TextureRect" parent="graphics/buttons/exit_button"]
modulate = Color( 1, 1, 1, 0.705882 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.0
margin_top = -43.0
margin_right = 43.0
margin_bottom = 43.0
texture = ExtResource( 11 )

[node name="animation_player" type="AnimationPlayer" parent="graphics/buttons/exit_button"]
anims/button_down = SubResource( 2 )

[node name="about_button" type="Button" parent="graphics/buttons"]
margin_left = 475.0
margin_top = 395.0
margin_right = 495.0
margin_bottom = 415.0
rect_pivot_offset = Vector2( 10, 10 )

[node name="texture_rect3" type="TextureRect" parent="graphics/buttons/about_button"]
modulate = Color( 0.494118, 0.847059, 0.968627, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.5
margin_top = -106.5
margin_right = 122.5
margin_bottom = 106.5
texture = ExtResource( 8 )

[node name="texture_rect" type="TextureRect" parent="graphics/buttons/about_button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.5
margin_top = -113.5
margin_right = 131.5
margin_bottom = 113.5
texture = ExtResource( 9 )

[node name="texture_rect2" type="TextureRect" parent="graphics/buttons/about_button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.5
margin_top = -84.5
margin_right = 97.5
margin_bottom = 84.5
texture = ExtResource( 10 )

[node name="texture_rect4" type="TextureRect" parent="graphics/buttons/about_button"]
modulate = Color( 1, 1, 1, 0.705882 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.5
margin_top = -46.5
margin_right = 46.5
margin_bottom = 46.5
texture = ExtResource( 12 )

[node name="animation_player" type="AnimationPlayer" parent="graphics/buttons/about_button"]
anims/button_down = SubResource( 3 )

[node name="settings_button" type="Button" parent="graphics/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = 200.0
margin_right = 10.0
margin_bottom = 220.0
rect_pivot_offset = Vector2( 10, 10 )

[node name="texture_rect3" type="TextureRect" parent="graphics/buttons/settings_button"]
modulate = Color( 0.917647, 0.529412, 0.0745098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.5
margin_top = -106.5
margin_right = 122.5
margin_bottom = 106.5
texture = ExtResource( 8 )

[node name="texture_rect" type="TextureRect" parent="graphics/buttons/settings_button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.5
margin_top = -113.5
margin_right = 131.5
margin_bottom = 113.5
texture = ExtResource( 9 )

[node name="texture_rect2" type="TextureRect" parent="graphics/buttons/settings_button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.5
margin_top = -84.5
margin_right = 97.5
margin_bottom = 84.5
texture = ExtResource( 10 )

[node name="texture_rect4" type="TextureRect" parent="graphics/buttons/settings_button"]
modulate = Color( 1, 1, 1, 0.705882 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.5
margin_top = -48.5
margin_right = 48.5
margin_bottom = 48.5
texture = ExtResource( 13 )

[node name="animation_player" type="AnimationPlayer" parent="graphics/buttons/settings_button"]
anims/button_down = SubResource( 4 )

[node name="play_button" type="Button" parent="graphics/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 10, 10 )

[node name="texture_rect3" type="TextureRect" parent="graphics/buttons/play_button"]
modulate = Color( 0.0745098, 0.917647, 0.760784, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -163.0
margin_top = -141.5
margin_right = 163.0
margin_bottom = 141.5
texture = ExtResource( 14 )

[node name="texture_rect2" type="TextureRect" parent="graphics/buttons/play_button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -108.0
margin_right = 125.0
margin_bottom = 108.0
texture = ExtResource( 15 )

[node name="texture_rect" type="TextureRect" parent="graphics/buttons/play_button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -174.5
margin_top = -151.0
margin_right = 174.5
margin_bottom = 151.0
texture = ExtResource( 16 )

[node name="texture_rect4" type="TextureRect" parent="graphics/buttons/play_button"]
modulate = Color( 1, 1, 1, 0.705882 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.0
margin_top = -66.5
margin_right = 69.0
margin_bottom = 66.5
texture = ExtResource( 6 )

[node name="animation_player" type="AnimationPlayer" parent="graphics/buttons/play_button"]
anims/button_down = SubResource( 5 )

[node name="version" type="Label" parent="graphics"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -130.0
margin_right = -10.0
margin_bottom = 49.0
grow_horizontal = 0
custom_fonts/font = SubResource( 6 )
text = "version"
align = 2

[node name="theme_panel" parent="." instance=ExtResource( 17 )]
visible = false

[node name="play_panel" parent="." instance=ExtResource( 18 )]
visible = false

[node name="settings_panel" parent="." instance=ExtResource( 19 )]
visible = false

[node name="about_panel" parent="." instance=ExtResource( 20 )]
visible = false

[node name="leave_panel" parent="." instance=ExtResource( 21 )]
visible = false
[connection signal="button_down" from="graphics/buttons/exit_button" to="graphics/buttons/exit_button/animation_player" method="play" binds= [ "button_down" ]]
[connection signal="button_up" from="graphics/buttons/exit_button" to="." method="_on_exit_button_up"]
[connection signal="button_up" from="graphics/buttons/exit_button" to="graphics/buttons/exit_button/animation_player" method="play_backwards" binds= [ "button_down" ]]
[connection signal="button_down" from="graphics/buttons/about_button" to="graphics/buttons/about_button/animation_player" method="play" binds= [ "button_down" ]]
[connection signal="button_up" from="graphics/buttons/about_button" to="." method="_on_about_button_up"]
[connection signal="button_up" from="graphics/buttons/about_button" to="graphics/buttons/about_button/animation_player" method="play_backwards" binds= [ "button_down" ]]
[connection signal="button_down" from="graphics/buttons/settings_button" to="graphics/buttons/settings_button/animation_player" method="play" binds= [ "button_down" ]]
[connection signal="button_up" from="graphics/buttons/settings_button" to="." method="_on_settings_button_up"]
[connection signal="button_up" from="graphics/buttons/settings_button" to="graphics/buttons/settings_button/animation_player" method="play_backwards" binds= [ "button_down" ]]
[connection signal="button_down" from="graphics/buttons/play_button" to="graphics/buttons/play_button/animation_player" method="play" binds= [ "button_down" ]]
[connection signal="button_up" from="graphics/buttons/play_button" to="." method="_on_play_button_up"]
[connection signal="button_up" from="graphics/buttons/play_button" to="graphics/buttons/play_button/animation_player" method="play_backwards" binds= [ "button_down" ]]
